# straighten

./: .gitignore  CMakeLists.txt  Makefile  Makefile.proceed  README.md  main.cpp
